--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2854,8 +2854,9 @@ input, select, textarea {
 
 				#header .logo .symbol img {
 					display: block;
-					width: 2em;
-					height: 2em;
+					/* width: 2em; */
+					height: 4em;
+               image-rendering: pixelated;
 				}
 
 		#header nav {
